projects/full-stack_chatApp_k8s/k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-app   
spec:
  selector:
    app: backend
  ports:
  - port: 5001          
    targetPort: 5001
